# eng-tpi-tm

./: README.md  main.py  output.tmx  output.xml  pyproject.toml
data/wiki-books/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  y.txt  z.txt
parsers/: wiki_books.py
writers/: tmx.py
